change v1 for hcmus-dewywaylouis

--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -1,16 +1,19 @@
 \chapter{Data structures}
 
-\kactlimport{OrderStatisticTree.h}
+\kactlimport{OrderedSet.h}
 \kactlimport{HashMap.h}
 \kactlimport{SegmentTree.h}
 \kactlimport{LazySegmentTree.h}
 % \kactlimport{UnionFind.h}
-\kactlimport{UnionFindRollback.h}
-\kactlimport{SubMatrix.h}
+\kactlimport{DSURollback.h}
+\kactlimport{PrefixSum2D.h}
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
 \kactlimport{FenwickTree.h}
 \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
-\kactlimport{MoQueries.h}
+\kactlimport{RRangeSet.h}
+\kactlimport{PersistentArray.h}
+\kactlimport{LiChao.h}
+% \kactlimport{MoQueries.h}
