--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,10 +2,11 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{KTH Royal Institute of Technology}{kth}
-\team{Omogen Heap}{Simon Lindholm, Johan Sannemo, Mårten Wiman}
+\university{VNU-HCMUS}{University of Science, VNU-HCM}{hcmus-logo}
+\team{HCMUS-DewyWayLouis}{Hieu Vu Tran Minh, Bao Quoc Doan, Thinh Duc Hoang}
+\contest{\ }{\ }
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
-\contest{\ }{\today}
+% \contest{\ }{\today}
 % \enablecolors
 
 \begin{document}
@@ -18,19 +19,19 @@
 	\setcounter{tocdepth}{0}
 	\tableofcontents
 
-	\kactlchapter{contest}
-	\kactlchapter{math}
+	% \kactlchapter{contest}
+	% \kactlchapter{math}
 	\kactlchapter{data-structures}
 	\kactlchapter{numerical}
 	\kactlchapter{number-theory}
 	\kactlchapter{combinatorial}
 	\kactlchapter{graph}
-	\kactlchapter{geometry}
+	% \kactlchapter{geometry}
 	\kactlchapter{strings}
 	\kactlchapter{various}
 	\end{multicols*}
 
-	\begin{multicols*}{3}
-	\kactlchapter{appendix}
-	\end{multicols*}
+	% \begin{multicols*}{3}
+	% \kactlchapter{appendix}
+	% \end{multicols*}
 \end{document}
