--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -1,17 +1,13 @@
 \chapter{Various}
-
-\section{Intervals}
-	\kactlimport{IntervalContainer.h}
-	\kactlimport{IntervalCover.h}
-	\kactlimport{ConstantIntervals.h}
-
-\section{Misc. algorithms}
-	\kactlimport{TernarySearch.h}
-	\kactlimport{LIS.h}
-	\kactlimport{FastKnapsack.h}
+	
+\kactlimport{TernarySearch.h}
 
 \section{Dynamic programming}
-	\kactlimport{KnuthDP.h}
+	\kactlimport{LIS.h}
+	\kactlimport{EditDistance.h}
+	\kactlimport{FastKnapsack.h}
+	\kactlimport{UnboundKnapsack.h}
+	% \kactlimport{KnuthDP.h}
 	\kactlimport{DivideAndConquerDP.h}
 
 \section{Debugging tricks}
@@ -39,8 +35,10 @@
 		\end{itemize}
 	\kactlimport{FastMod.h}
 	\kactlimport{FastInput.h}
-	\kactlimport{BumpAllocator.h}
-	\kactlimport{SmallPtr.h}
-	\kactlimport{BumpAllocatorSTL.h}
+	\kactlimport{Int128Helper.h}
+	% \kactlimport{BumpAllocator.h}
+	% \kactlimport{SmallPtr.h}
+	% \kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
+	\kactlimport{IncreaseStackSize.h.h}
 	\kactlimport{SIMD.h}
