--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -5,42 +5,42 @@
 	\kactlimport{FloydWarshall.h}
 	\kactlimport{TopoSort.h}
 
-\section{Network flow}
-	\kactlimport{PushRelabel.h}
-	\kactlimport{MinCostMaxFlow.h}
-	\kactlimport{EdmondsKarp.h}
+% \section{Network flow}
+	% \kactlimport{PushRelabel.h}
+	% \kactlimport{MinCostMaxFlow.h}
+	% \kactlimport{EdmondsKarp.h}
 	% \kactlimport{Dinic.h}
-	\kactlimport{MinCut.h}
-	\kactlimport{GlobalMinCut.h}
-	\kactlimport{GomoryHu.h}
+	% \kactlimport{MinCut.h}
+	% \kactlimport{GlobalMinCut.h}
+	% \kactlimport{GomoryHu.h}
 
-\section{Matching}
-	\kactlimport{hopcroftKarp.h}
-	\kactlimport{DFSMatching.h}
-	\kactlimport{MinimumVertexCover.h}
-	\kactlimport{WeightedMatching.h}
-	\kactlimport{GeneralMatching.h}
+% \section{Matching}
+	% \kactlimport{hopcroftKarp.h}
+	% \kactlimport{DFSMatching.h}
+	% \kactlimport{MinimumVertexCover.h}
+	% \kactlimport{WeightedMatching.h}
+	% \kactlimport{GeneralMatching.h}
 
 \section{DFS algorithms}
 	\kactlimport{SCC.h}
 	\kactlimport{BiconnectedComponents.h}
-	\kactlimport{2sat.h}
+	% \kactlimport{2sat.h}
 	\kactlimport{EulerWalk.h}
 
-\section{Coloring}
-	\kactlimport{EdgeColoring.h}
+% \section{Coloring}
+	% \kactlimport{EdgeColoring.h}
 
-\section{Heuristics}
-	\kactlimport{MaximalCliques.h}
-	\kactlimport{MaximumClique.h}
-	\kactlimport{MaximumIndependentSet.h}
+% \section{Heuristics}
+	% \kactlimport{MaximalCliques.h}
+	% \kactlimport{MaximumClique.h}
+	% \kactlimport{MaximumIndependentSet.h}
 
 \section{Trees}
 	\kactlimport{BinaryLifting.h}
 	\kactlimport{LCA.h}
-	\kactlimport{CompressTree.h}
+	% \kactlimport{CompressTree.h}
 	\kactlimport{HLD.h}
-	\kactlimport{LinkCutTree.h}
+	% \kactlimport{LinkCutTree.h}
 	\kactlimport{DirectedMST.h}
 
 \section{Math}
@@ -53,8 +53,8 @@
 		Remove the $i$th row and column and take the determinant; this yields the number of directed spanning trees rooted at $i$
 		(if $G$ is undirected, remove any row/column).
 
-	\subsection{Erdős–Gallai theorem}
+	% \subsection{Erdős–Gallai theorem}
 		% Source: https://en.wikipedia.org/wiki/Erd%C5%91s%E2%80%93Gallai_theorem
 		% Test: stress-tests/graph/erdos-gallai.cpp
-		A simple graph with node degrees $d_1 \ge \dots \ge d_n$ exists iff $d_1 + \dots + d_n$ is even and for every $k = 1\dots n$,
-		\[ \sum _{i=1}^{k}d_{i}\leq k(k-1)+\sum _{i=k+1}^{n}\min(d_{i},k). \]
+		% A simple graph with node degrees $d_1 \ge \dots \ge d_n$ exists iff $d_1 + \dots + d_n$ is even and for every $k = 1\dots n$,
+		% \[ \sum _{i=1}^{k}d_{i}\leq k(k-1)+\sum _{i=k+1}^{n}\min(d_{i},k). \]
