change v2, readd geometry, add matrix rr code

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -26,7 +26,7 @@
 	\kactlchapter{number-theory}
 	\kactlchapter{combinatorial}
 	\kactlchapter{graph}
-	% \kactlchapter{geometry}
+	\kactlchapter{geometry}
 	\kactlchapter{strings}
 	\kactlchapter{various}
 	\end{multicols*}
