--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -17,12 +17,13 @@
 \section{Matrices}
   % \kactlimport{Determinant.h}
   % \kactlimport{IntDeterminant.h}
-  \kactlimport{SolveLinear.h}
-  \kactlimport{SolveLinear2.h}
+  % \kactlimport{SolveLinear.h}
+  % \kactlimport{SolveLinear2.h}
   % \kactlimport{SolveLinearBinary.h}
   % \kactlimport{MatrixInverse.h}
   % \kactlimport{MatrixInverse-mod.h}
   % \kactlimport{Tridiagonal.h}
+  \kactlimport{RRMatrix.h}
 
 \section{Fourier transforms}
 	\kactlimport{FastFourierTransform.h}
