--- a/content/geometry/chapter.tex
+++ b/content/geometry/chapter.tex
@@ -14,8 +14,8 @@
 
 \section{Circles}
 	\kactlimport{CircleIntersection.h}
-	\kactlimport{CircleTangents.h}
-	% \kactlimport{CircleLine.h}
+	% \kactlimport{CircleTangents.h}
+	\kactlimport{CircleLine.h}
 	\kactlimport{CirclePolygonIntersection.h}
 	\kactlimport{circumcircle.h}
 	\kactlimport{MinimumEnclosingCircle.h}
@@ -29,17 +29,17 @@
 	\kactlimport{ConvexHull.h}
 	\kactlimport{HullDiameter.h}
 	\kactlimport{PointInsideHull.h}
-	\kactlimport{LineHullIntersection.h}
+	% \kactlimport{LineHullIntersection.h}
 
 \section{Misc. Point Set Problems}
 	\kactlimport{ClosestPair.h}
 	% \kactlimport{ManhattanMST.h}
-	\kactlimport{kdTree.h}
+	% \kactlimport{kdTree.h}
 	% \kactlimport{DelaunayTriangulation.h}
-	\kactlimport{FastDelaunay.h}
+	% \kactlimport{FastDelaunay.h}
 
-\section{3D}
-	\kactlimport{PolyhedronVolume.h}
-	\kactlimport{Point3D.h}
-	\kactlimport{3dHull.h}
-	\kactlimport{sphericalDistance.h}
+% \section{3D}
+	% \kactlimport{PolyhedronVolume.h}
+	% \kactlimport{Point3D.h}
+	% \kactlimport{3dHull.h}
+	% \kactlimport{sphericalDistance.h}
