readd math, add bignum (not added now)

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -20,7 +20,7 @@
 	\tableofcontents
 
 	% \kactlchapter{contest}
-	% \kactlchapter{math}
+	\kactlchapter{math}
 	\kactlchapter{data-structures}
 	\kactlchapter{numerical}
 	\kactlchapter{number-theory}
