change v3.1 minor fix to make stuff built

--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -13,7 +13,7 @@
 \kactlimport{FenwickTree.h}
 \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
-\kactlimport{RRangeSet.h}
+\kactlimport{RRRangeSet.h}
 \kactlimport{PersistentArray.h}
 \kactlimport{LiChao.h}
 % \kactlimport{MoQueries.h}
