--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -40,5 +40,5 @@
 	% \kactlimport{SmallPtr.h}
 	% \kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
-	\kactlimport{IncreaseStackSize.h.h}
+	\kactlimport{IncreaseStackSize.h}
 	\kactlimport{SIMD.h}
