--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -25,8 +25,8 @@
   % \kactlimport{Tridiagonal.h}
   \kactlimport{RRMatrix.h}
 
-\section{Fourier transforms}
-	\kactlimport{FastFourierTransform.h}
-	\kactlimport{FastFourierTransformMod.h}
+% \section{Fourier transforms}
+	% \kactlimport{FastFourierTransform.h}
+	% \kactlimport{FastFourierTransformMod.h}
 	% \kactlimport{NumberTheoreticTransform.h}
 	% \kactlimport{FastSubsetTransform.h}
