--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -7,6 +7,7 @@
 	\kactlimport{EditDistance.h}
 	\kactlimport{FastKnapsack.h}
 	\kactlimport{UnboundKnapsack.h}
+	\kactlimport{BoundedKnapsack.h}
 	% \kactlimport{KnuthDP.h}
 	\kactlimport{DivideAndConquerDP.h}
 
