--- a/content/math/chapter.tex
+++ b/content/math/chapter.tex
@@ -12,23 +12,15 @@ The extremum is given by $x = -b/2a$.
 \begin{align*}
 \sin(v+w)&{}=\sin v\cos w+\cos v\sin w\\
 \cos(v+w)&{}=\cos v\cos w-\sin v\sin w\\
-\end{align*}
-\begin{align*}
 \tan(v+w)&{}=\dfrac{\tan v+\tan w}{1-\tan v\tan w}\\
 \sin v+\sin w&{}=2\sin\dfrac{v+w}{2}\cos\dfrac{v-w}{2}\\
 \cos v+\cos w&{}=2\cos\dfrac{v+w}{2}\cos\dfrac{v-w}{2}
-\end{align*}
-\[ (V+W)\tan(v-w)/2{}=(V-W)\tan(v+w)/2 \]
-where $V, W$ are lengths of sides opposite angles $v, w$.
-\begin{align*}
-	a\cos x+b\sin x&=r\cos(x-\phi)\\
-	a\sin x+b\cos x&=r\sin(x+\phi)
+a\cos x+b\sin x&=r\cos(x-\phi)\\
+a\sin x+b\cos x&=r\sin(x+\phi)
 \end{align*}
 where $r=\sqrt{a^2+b^2}, \phi=\operatorname{atan2}(b,a)$.
 
 \section{Geometry}
-
-\subsection{Triangles}
 Side lengths: $a,b,c$\\
 Semiperimeter: $p=\dfrac{a+b+c}{2}$\\
 Area: $A=\sqrt{p(p-a)(p-b)(p-c)}$\\
@@ -66,3 +58,13 @@ $$\ln(1+x) = x-\frac{x^2}{2}+\frac{x^3}{3}-\frac{x^4}{4}+\dots,\,(-1<x\leq1)$$
 $$\sqrt{1+x} = 1+\frac{x}{2}-\frac{x^2}{8}+\frac{2x^3}{32}-\frac{5x^4}{128}+\dots,\,(-1\leq x\leq1)$$
 $$\sin x = x-\frac{x^3}{3!}+\frac{x^5}{5!}-\frac{x^7}{7!}+\dots,\,(-\infty<x<\infty)$$
 $$\cos x = 1-\frac{x^2}{2!}+\frac{x^4}{4!}-\frac{x^6}{6!}+\dots,\,(-\infty<x<\infty)$$
+$$\ln(2) = \frac{1}{1*2} + \frac{1}{3*4} + \frac{1}{5*6} + \dots$$
+$$\ln(2) = \sum^{\infty}_{k=1}\frac{1}{2^{k}k}$$
+$$\ln(\frac{n}{n-1}) = \sum^{\infty}_{k=1}\frac{1}{n^{k}k}$$
+$$\frac{\pi}{4} = \frac{1}{1} - \frac{1}{3} + \frac{1}{5} - \dots$$
+$$e = \frac{1}{0!} + \frac{1}{1!} + \frac{1}{2!} + \dots$$
+
+\section{Sum of divisors}
+Given $n = p^{m_1}_1 \dot p^{m_2}_2 \dots p^{m_k}_k$ with $p_i$ is prime factor
+$\sigma(n) = (p^0_1+p^1_1+\dots+p^{m_1}_1)(p^0_2+p^1_2+\dots+p^{m_2}_2)(p^0_k+p^1_k+\dots+p^{m_k}_k)$
+or $\sigma(n) = \prod^{k}_{i=1} \frac{p_i^{m_i+1}-1}{p_i-1}
