--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -11,6 +11,7 @@
 
 \section{Primality}
 	\kactlimport{FastEratosthenes.h}
+	\kactlimport{SieveOnRange.h}
 	\kactlimport{MillerRabin.h}
 	\kactlimport{Factor.h}
 
