--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -7,4 +7,5 @@
 \kactlimport{SuffixArray.h}
 % \kactlimport{SuffixTree.h}
 \kactlimport{Hashing.h}
+\kactlimport{Hashing2d.h}
 % \kactlimport{AhoCorasick.h}
