change v4.1: minor fix to make it build

--- a/content/math/chapter.tex
+++ b/content/math/chapter.tex
@@ -12,9 +12,13 @@ The extremum is given by $x = -b/2a$.
 \begin{align*}
 \sin(v+w)&{}=\sin v\cos w+\cos v\sin w\\
 \cos(v+w)&{}=\cos v\cos w-\sin v\sin w\\
+\end{align*}
+\begin{align*}
 \tan(v+w)&{}=\dfrac{\tan v+\tan w}{1-\tan v\tan w}\\
 \sin v+\sin w&{}=2\sin\dfrac{v+w}{2}\cos\dfrac{v-w}{2}\\
 \cos v+\cos w&{}=2\cos\dfrac{v+w}{2}\cos\dfrac{v-w}{2}
+\end{align*}
+\begin{align*}
 a\cos x+b\sin x&=r\cos(x-\phi)\\
 a\sin x+b\cos x&=r\sin(x+\phi)
 \end{align*}
@@ -67,4 +71,4 @@ $$e = \frac{1}{0!} + \frac{1}{1!} + \frac{1}{2!} + \dots$$
 \section{Sum of divisors}
 Given $n = p^{m_1}_1 \dot p^{m_2}_2 \dots p^{m_k}_k$ with $p_i$ is prime factor
 $\sigma(n) = (p^0_1+p^1_1+\dots+p^{m_1}_1)(p^0_2+p^1_2+\dots+p^{m_2}_2)(p^0_k+p^1_k+\dots+p^{m_k}_k)$
-or $\sigma(n) = \prod^{k}_{i=1} \frac{p_i^{m_i+1}-1}{p_i-1}
+or $\sigma(n) = \prod^{k}_{i=1} \frac{p_i^{m_i+1}-1}{p_i-1}$
