--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -1,6 +1,7 @@
 \chapter{Various}
 	
 \kactlimport{TernarySearch.h}
+\kactlimport{vuhieuComb.h}
 
 \section{Dynamic programming}
 	\kactlimport{LIS.h}
@@ -10,6 +11,7 @@
 	\kactlimport{BoundedKnapsack.h}
 	% \kactlimport{KnuthDP.h}
 	\kactlimport{DivideAndConquerDP.h}
+	\kactlimport{DPSOS.h}
 
 \section{Debugging tricks}
 	\begin{itemize}
