change v5.1: add vietnamese package to make stuff build

--- a/content/tex/kactlpkg.sty
+++ b/content/tex/kactlpkg.sty
@@ -22,6 +22,8 @@
 \usepackage[normalem]{ulem}
 \usepackage[hidelinks]{hyperref}        % For clickable table of contents
 
+\usepackage[vietnamese]{babel}			% Use vietnamese
+
 % Config commands
 \newcommand{\subtitle}[1]{
 	\def\@subtitle{#1}
