change v6: add dijkstra on segtree

--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -16,4 +16,5 @@
 \kactlimport{RRRangeSet.h}
 \kactlimport{PersistentArray.h}
 \kactlimport{LiChao.h}
+\kactlimport{DijkstraOnSegtree.h}
 % \kactlimport{MoQueries.h}
