change string, dp, misc

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -28,6 +28,7 @@
 	\kactlchapter{graph}
 	\kactlchapter{geometry}
 	\kactlchapter{strings}
+	\kactlchapter{DP}
 	\kactlchapter{various}
 	\end{multicols*}
 
