--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -5,7 +5,7 @@
 \kactlimport{Manacher.h}
 \kactlimport{MinRotation.h}
 \kactlimport{SuffixArray.h}
-% \kactlimport{SuffixTree.h}
+\kactlimport{Trie.h}
 \kactlimport{Hashing.h}
 \kactlimport{Hashing2d.h}
-% \kactlimport{AhoCorasick.h}
+\kactlimport{AhoCorasick.h}
