--- a/content/tex/kactlpkg.sty
+++ b/content/tex/kactlpkg.sty
@@ -22,7 +22,7 @@
 \usepackage[normalem]{ulem}
 \usepackage[hidelinks]{hyperref}        % For clickable table of contents
 
-\usepackage[vietnamese]{babel}			% Use vietnamese
+% \usepackage[vietnamese]{babel}			% Use vietnamese
 
 % Config commands
 \newcommand{\subtitle}[1]{
