--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -7,6 +7,7 @@
 % \kactlimport{UnionFind.h}
 \kactlimport{DSURollback.h}
 \kactlimport{PrefixSum2D.h}
+\kactlimport{PrefixSum3D.h}
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
