--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -4,6 +4,7 @@
 \kactlimport{vuhieuComb.h}
 \kactlimport{BitmaskUtil.h}
 \kactlimport{SumOfSubset.h}
+\kactlimport{BigInt.h}
 
 \section{Debugging tricks}
 	\begin{itemize}
