--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -24,9 +24,10 @@
 \section{DFS algorithms}
 	\kactlimport{SCC.h}
 	\kactlimport{BridgeArticulation.h}
-	% \kactlimport{BiconnectedComponents.h}
+	\kactlimport{BiconnectedComponents.h}
 	% \kactlimport{2sat.h}
-	\kactlimport{EulerWalk.h}
+	% \kactlimport{EulerWalk.h}
+	\kactlimport{EulerTour.h}
 
 % \section{Coloring}
 	% \kactlimport{EdgeColoring.h}
@@ -40,11 +41,11 @@
 	\kactlimport{BinaryLifting.h}
 	\kactlimport{LCA.h}
 	\kactlimport{LCAConstant.h}
-	% \kactlimport{CompressTree.h}
 	\kactlimport{HLD.h}
-	% \kactlimport{LinkCutTree.h}
 	\kactlimport{DirectedMST.h}
-	% \kactlimport{TreeDiameter.h}
+	\kactlimport{TreeDiameter.h}
+	% \kactlimport{CompressTree.h}
+	% \kactlimport{LinkCutTree.h}
 
 % \section{Math}
 	% \subsection{Number of Spanning Trees}
