--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -4,6 +4,7 @@
 \kactlimport{HashMap.h}
 \kactlimport{SegmentTree.h}
 \kactlimport{LazySegmentTree.h}
+\kactlimport{BIT2D.h}
 % \kactlimport{UnionFind.h}
 \kactlimport{DSURollback.h}
 \kactlimport{PrefixSum2D.h}
@@ -11,8 +12,8 @@
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
-\kactlimport{FenwickTree.h}
-\kactlimport{FenwickTree2d.h}
+\kactlimport{FenwickTree0.h}
+% \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
 \kactlimport{RRRangeSet.h}
 \kactlimport{PersistentArray.h}
