--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -39,7 +39,7 @@
 
 \section{Trees}
 	\kactlimport{BinaryLifting.h}
-	\kactlimport{LCA.h}
+	% \kactlimport{LCA.h}
 	\kactlimport{LCAConstant.h}
 	\kactlimport{HLD.h}
 	\kactlimport{DirectedMST.h}
