--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -13,7 +13,7 @@
 	\kactlimport{FastEratosthenes.h}
 	\kactlimport{SieveOnRange.h}
 	\kactlimport{MillerRabin.h}
-	\kactlimport{Factor.h}
+	% \kactlimport{Factor.h}
 
 \section{Divisibility}
 	\kactlimport{euclid.h}
