--- a/content/strings/chapter.tex
+++ b/content/strings/chapter.tex
@@ -6,6 +6,6 @@
 \kactlimport{MinRotation.h}
 \kactlimport{SuffixArray.h}
 \kactlimport{Trie.h}
-\kactlimport{Hashing.h}
+\kactlimport{Hashing3.h}
 \kactlimport{Hashing2d.h}
 \kactlimport{AhoCorasick.h}
