--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -32,9 +32,13 @@
 	\kactlimport{FastMod.h}
 	\kactlimport{FastInput.h}
 	\kactlimport{Int128Helper.h}
-	% \kactlimport{BumpAllocator.h}
+	\kactlimport{BumpAllocator.h}
 	% \kactlimport{SmallPtr.h}
 	% \kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
 	\kactlimport{IncreaseStackSize.h}
 	% \kactlimport{SIMD.h}
+
+	\kactlimport{c_cpp_properties.json}
+	\kactlimport{launch.json}
+	
