--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -12,7 +12,7 @@
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
-\kactlimport{FenwickTree0.h}
+\kactlimport{FenwickTree1Index.h}
 % \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
 \kactlimport{RRRangeSet.h}
