add vuhieu request

--- a/content/various/chapter.tex
+++ b/content/various/chapter.tex
@@ -33,6 +33,7 @@
 	\kactlimport{FastInput.h}
 	\kactlimport{Int128Helper.h}
 	\kactlimport{BumpAllocator.h}
+	\kactlimport{Compression.h}
 	% \kactlimport{SmallPtr.h}
 	% \kactlimport{BumpAllocatorSTL.h}
 	% \kactlimport{Unrolling.h}
