--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -7,7 +7,7 @@
 
 \section{Network flow}
 	% \kactlimport{PushRelabel.h}
-	\kactlimport{MinCostMaxFlow.h}
+	% \kactlimport{MinCostMaxFlow.h}
 	% \kactlimport{EdmondsKarp.h}
 	\kactlimport{Dinic.h}
 	% \kactlimport{MinCut.h}
